delivery/helm-chart/security/ingress/apim-ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apim
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`${APIM_FQDN}`)
      middlewares:
        - name: security-apim
      services:
        - kind: Service
          name: graviteeio-apim3x-${LANDSCAPE_ENV}-api
          port: 83
