delivery/helm-chart/security/ingress/apim-portal-ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apim-portal
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`${APIM_PORTAL_FQDN}`)
      middlewares:
        - name: security-apim
      services:
        - kind: Service
          name: graviteeio-apim3x-${LANDSCAPE_ENV}-portal
          port: 8003
